<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PS4 Payload Sender</string>
    <string name="ok">Ok</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="error">Error!</string>
    <string name="enter_port_and_ip">You need to type an IP Address or a Port.</string>
    <string name="null_file"><![CDATA[Error, file is null >< !!]]></string>
    <string name="injecting">Injecting...</string>
    <string name="done">Done!</string>
    <string name="ip_address">IP Address</string>
    <string name="step_1_connection">Step 1: Connection</string>
    <string name="connect">Connect</string>
    <string name="step_2_load_payload">Step 2: Load Payload</string>
    <string name="browse_payload">Browse Payload</string>
    <string name="send_payload">Send Payload</string>
    <string name="injecting_text">Injecting...</string>
    <string name="made_by_valentinbreiz">made by valentinbreiz</string>
    <string name="step_3_send_payload">Step 3: Send Payload</string>
    <string name="devs_name">This application is a part of the Mira project.\n\nDevelopment:\n - @valentinbreiz\n - @astonbraham\n\nTester:\n - @kojo9999\n\nTranslator:\n - @toffi40\n - @theheroGAC\n - @indraaguslesmana\n - @inExtremo\n - @helloitu\n - @ot_inc\n - @liududu\n - @Darkmet98\n - @FlatracerMOD</string>
</resources>
