<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="valentinbreiz.ps4payloadsender.Connection">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="43dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_1_connection"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/IPAddressTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="60dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Port"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />

            <EditText
                android:id="@+id/PortTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="9020"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="120dp" />

            <Button
                android:id="@+id/ConnectBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:onClick="Connect"
                android:text="@string/connect"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="163dp"
                android:textColor="#FFF"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="14sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="43dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_2_load_payload"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="227dp" />

            <Button
                android:id="@+id/BrowsePayloadBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Browse"
                android:text="@string/browse_payload"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="260dp"
                android:textColor="#FFF"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="14sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="43dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_3_send_payload"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="337dp" />

            <Button
                android:id="@+id/SendPayloadBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Send"
                android:text="@string/send_payload"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="371dp"
                android:textColor="#FFF"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="412dp">

                <TextView
                    android:id="@+id/InjectingLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/injecting_text"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="395dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/krek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/made_by_valentinbreiz"
            android:textSize="14sp"
            android:gravity="left"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="395dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
